--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,83 +1,373 @@
 mqtt:
   sensor:
-    # --- HARTER FARMS: NODE 2 (Production) ---
-    
-    # 1. Temperature
+    # ==================================================================
+    #                           NODE 1 (WOODS)
+    # ==================================================================
+    - name: "Node 1 Temperature"
+      unique_id: "node_1_temp"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "°F"
+      device_class: temperature
+      value_template: >
+        {% if value_json.id == 'node_1' %}
+          {{ value_json.temp }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 1 Vacuum"
+      unique_id: "node_1_vac"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "inHg"
+      icon: "mdi:gauge"
+      force_update: true
+      value_template: >
+        {% if value_json.id == 'node_1' %}
+          {{ value_json.vac }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 1 Battery"
+      unique_id: "node_1_batt"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      device_class: battery
+      value_template: >
+        {% if value_json.id == 'node_1' %}
+          {{ value_json.batt }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 1 Solar Status"
+      unique_id: "node_1_solar"
+      state_topic: "lora/mesh/rx"
+      icon: "mdi:solar-power"
+      value_template: >
+        {% if value_json.id == 'node_1' %}
+          {% if value_json.sol == 1 %}
+            Charging
+          {% elif value_json.sol == 2 %}
+            Full
+          {% else %}
+            Standby
+          {% endif %}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 1 Boot Time"
+      unique_id: "node_1_boot"
+      state_topic: "lora/mesh/rx"
+      device_class: timestamp
+      value_template: >
+        {% if value_json.id == 'node_1' and value_json.up is defined %}
+          {{ (now() - timedelta(seconds=value_json.up)).isoformat() }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 1 Uptime"
+      unique_id: "node_1_uptime"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "s"
+      icon: "mdi:clock-outline"
+      value_template: >
+        {% if value_json.id == 'node_1' %}
+          {{ value_json.up }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # --- NEW NAME: SAP LEVEL ---
+    - name: "Node 1 Sap Level"
+      unique_id: "node_1_sap_level_fixed"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      icon: "mdi:cup-water"
+      value_template: >
+        {% if value_json.id == 'node_1' and value_json.lvl is defined %}
+          {{ value_json.lvl }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # ==================================================================
+    #                           NODE 2 (BARN)
+    # ==================================================================
     - name: "Node 2 Temperature"
       unique_id: "node_2_temp"
       state_topic: "lora/mesh/rx"
+      unit_of_measurement: "°F"
+      device_class: temperature
       value_template: >
         {% if value_json.id == 'node_2' %}
           {{ value_json.temp }}
         {% else %}
-          {{ states('sensor.node_2_temperature') }}
+          {{ this.state }}
         {% endif %}
-      unit_of_measurement: "°C"
-      device_class: temperature
-      state_class: measurement
 
-    # 2. Battery Level
-    - name: "Node 2 Battery"
-      unique_id: "node_2_batt"
-      state_topic: "lora/mesh/rx"
-      value_template: >
-        {% if value_json.id == 'node_2' %}
-          {{ value_json.batt }}
-        {% else %}
-          {{ states('sensor.node_2_battery') }}
-        {% endif %}
-      unit_of_measurement: "%"
-      device_class: battery
-      state_class: measurement
-
-    # 3. Vacuum Pressure (Maple Lines)
     - name: "Node 2 Vacuum"
       unique_id: "node_2_vac"
       state_topic: "lora/mesh/rx"
+      unit_of_measurement: "inHg"
+      icon: "mdi:gauge"
+      force_update: true
       value_template: >
         {% if value_json.id == 'node_2' %}
           {{ value_json.vac }}
         {% else %}
-          {{ states('sensor.node_2_vacuum') }}
+          {{ this.state }}
         {% endif %}
-      unit_of_measurement: "inHg"
-      icon: mdi:gauge
 
-    # 4. Tank Level
-    - name: "Node 2 Tank Level"
-      unique_id: "node_2_lvl"
+    - name: "Node 2 Battery"
+      unique_id: "node_2_batt"
       state_topic: "lora/mesh/rx"
-      value_template: >
-        {% if value_json.id == 'node_2' %}
-          {{ value_json.lvl }}
-        {% else %}
-          {{ states('sensor.node_2_tank_level') }}
-        {% endif %}
       unit_of_measurement: "%"
-      icon: mdi:cup-water
-
-    # 5. Solar Status
-    - name: "Node 2 Solar"
-      unique_id: "node_2_sol"
-      state_topic: "lora/mesh/rx"
+      device_class: battery
       value_template: >
         {% if value_json.id == 'node_2' %}
-          {{ value_json.sol }}
+          {{ value_json.batt }}
         {% else %}
-          {{ states('sensor.node_2_solar') }}
+          {{ this.state }}
         {% endif %}
-      unit_of_measurement: "V"
-      device_class: voltage
 
-    # 6. Uptime (Heartbeat)
+    - name: "Node 2 Solar Status"
+      unique_id: "node_2_solar"
+      state_topic: "lora/mesh/rx"
+      icon: "mdi:solar-power"
+      value_template: >
+        {% if value_json.id == 'node_2' %}
+          {% if value_json.sol == 1 %}
+            Charging
+          {% elif value_json.sol == 2 %}
+            Full
+          {% else %}
+            Standby
+          {% endif %}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 2 Boot Time"
+      unique_id: "node_2_boot"
+      state_topic: "lora/mesh/rx"
+      device_class: timestamp
+      value_template: >
+        {% if value_json.id == 'node_2' and value_json.up is defined %}
+          {{ (now() - timedelta(seconds=value_json.up)).isoformat() }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
     - name: "Node 2 Uptime"
       unique_id: "node_2_uptime"
       state_topic: "lora/mesh/rx"
+      unit_of_measurement: "s"
+      icon: "mdi:clock-outline"
       value_template: >
         {% if value_json.id == 'node_2' %}
           {{ value_json.up }}
         {% else %}
-          {{ states('sensor.node_2_uptime') }}
+          {{ this.state }}
         {% endif %}
+
+    # --- NEW NAME: SAP LEVEL ---
+    - name: "Node 2 Sap Level"
+      unique_id: "node_2_sap_level_fixed"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      icon: "mdi:cup-water"
+      value_template: >
+        {% if value_json.id == 'node_2' and value_json.lvl is defined %}
+          {{ value_json.lvl }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # ==================================================================
+    #                           NODE 3 (CREEK)
+    # ==================================================================
+    - name: "Node 3 Temperature"
+      unique_id: "node_3_temp"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "°F"
+      device_class: temperature
+      value_template: >
+        {% if value_json.id == 'node_3' %}
+          {{ value_json.temp }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 3 Vacuum"
+      unique_id: "node_3_vac"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "inHg"
+      icon: "mdi:gauge"
+      force_update: true
+      value_template: >
+        {% if value_json.id == 'node_3' %}
+          {{ value_json.vac }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 3 Battery"
+      unique_id: "node_3_batt"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      device_class: battery
+      value_template: >
+        {% if value_json.id == 'node_3' %}
+          {{ value_json.batt }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 3 Solar Status"
+      unique_id: "node_3_solar"
+      state_topic: "lora/mesh/rx"
+      icon: "mdi:solar-power"
+      value_template: >
+        {% if value_json.id == 'node_3' %}
+          {% if value_json.sol == 1 %}
+            Charging
+          {% elif value_json.sol == 2 %}
+            Full
+          {% else %}
+            Standby
+          {% endif %}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 3 Boot Time"
+      unique_id: "node_3_boot"
+      state_topic: "lora/mesh/rx"
+      device_class: timestamp
+      value_template: >
+        {% if value_json.id == 'node_3' and value_json.up is defined %}
+          {{ (now() - timedelta(seconds=value_json.up)).isoformat() }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 3 Uptime"
+      unique_id: "node_3_uptime"
+      state_topic: "lora/mesh/rx"
       unit_of_measurement: "s"
-      icon: mdi:clock-outline
+      icon: "mdi:clock-outline"
+      value_template: >
+        {% if value_json.id == 'node_3' %}
+          {{ value_json.up }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # --- NEW NAME: SAP LEVEL ---
+    - name: "Node 3 Sap Level"
+      unique_id: "node_3_sap_level_fixed"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      icon: "mdi:cup-water"
+      value_template: >
+        {% if value_json.id == 'node_3' and value_json.lvl is defined %}
+          {{ value_json.lvl }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # ==================================================================
+    #                           NODE 4 (NEW LINE)
+    # ==================================================================
+    - name: "Node 4 Temperature"
+      unique_id: "node_4_temp"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "°F"
+      device_class: temperature
+      value_template: >
+        {% if value_json.id == 'node_4' %}
+          {{ value_json.temp }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 4 Vacuum"
+      unique_id: "node_4_vac"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "inHg"
+      icon: "mdi:gauge"
+      force_update: true
+      value_template: >
+        {% if value_json.id == 'node_4' %}
+          {{ value_json.vac }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 4 Battery"
+      unique_id: "node_4_batt"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      device_class: battery
+      value_template: >
+        {% if value_json.id == 'node_4' %}
+          {{ value_json.batt }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 4 Solar Status"
+      unique_id: "node_4_solar"
+      state_topic: "lora/mesh/rx"
+      icon: "mdi:solar-power"
+      value_template: >
+        {% if value_json.id == 'node_4' %}
+          {% if value_json.sol == 1 %}
+            Charging
+          {% elif value_json.sol == 2 %}
+            Full
+          {% else %}
+            Standby
+          {% endif %}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 4 Boot Time"
+      unique_id: "node_4_boot"
+      state_topic: "lora/mesh/rx"
+      device_class: timestamp
+      value_template: >
+        {% if value_json.id == 'node_4' and value_json.up is defined %}
+          {{ (now() - timedelta(seconds=value_json.up)).isoformat() }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    - name: "Node 4 Uptime"
+      unique_id: "node_4_uptime"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "s"
+      icon: "mdi:clock-outline"
+      value_template: >
+        {% if value_json.id == 'node_4' %}
+          {{ value_json.up }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
+
+    # --- NEW NAME: SAP LEVEL ---
+    - name: "Node 4 Sap Level"
+      unique_id: "node_4_sap_level_fixed"
+      state_topic: "lora/mesh/rx"
+      unit_of_measurement: "%"
+      icon: "mdi:cup-water"
+      value_template: >
+        {% if value_json.id == 'node_4' and value_json.lvl is defined %}
+          {{ value_json.lvl }}
+        {% else %}
+          {{ this.state }}
+        {% endif %}
